make applying retention settings not open db's unless the folder overrides the server retention settings, r=standard8, bug 637352